--- a/app/globals.css
+++ b/app/globals.css
@@ -81,3 +81,31 @@ nav .menu-button {
     display: block;
   }
 }
+
+/* HOME PAGE STYLES */
+.video-background {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full screen height */
+  overflow: hidden;
+}
+
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the video covers the entire background */
+  z-index: 0; /* Places the video behind the content */
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Center the content */
+  color: white;
+  text-align: center;
+  z-index: 1; /* Places the content above the video */
+}
