--- a/app/globals.css
+++ b/app/globals.css
@@ -269,4 +269,26 @@ h4 {
   flex-direction: row;
   justify-content: center;
   list-style-type: none;
+  position: relative;
+}
+
+.tooltip {
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.75);
+  color: white;
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 9999;
+}
+
+.list-tool:hover .tooltip {
+  opacity: 1;
+  visibility: visible;
 }
