--- a/app/globals.css
+++ b/app/globals.css
@@ -306,28 +306,23 @@ h4 {
 
 .project-card {
   border: 1px solid gray;
+  height: fit-content;
 }
 
-@media (max-width: 1920px) {
-  .section {
-      font-size: 1rem;
-      padding: 10px;
+@media (max-width: 1024px) {
+  .image-container {
+      height: 20rem !important;
   }
 }
 
-@media (max-width: 1366px) {
-  .section {
-      font-size: 0.9rem;
-      padding: 8px;
+@media (max-width: 450px) {
+  .project-card {
+      min-height: 33rem !important;
   }
-}
-
-.slider-container {
-  height: 850px;
 }
 
 .image-container {
-  height: 85%;
+  height: 70vh;
 }
 
 
