--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,7 @@ nav {
 
 nav a {
   color: white;
-  margin-right: 20px;
+  margin-right: 1.3rem;
   text-decoration: none;
 }
 
@@ -137,7 +137,7 @@ h3 em {
   border-radius: 12px; /* Bordes redondeados */
   box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.3); /* Sombra ligera */
   color: white; /* Texto blanco */
-  padding: 24px; /* Espaciado interno */
+  padding: 1.5rem; /* Espaciado interno */
   text-align: center; /* Centrar texto */
 }
 
@@ -157,10 +157,10 @@ h3 em {
 
 .serviceCard p {
   color: #ffffff; /* Azul claro para contraste */
-  margin-right: 20px; /* Sin márgenes adicionales */
-  margin-left: 20px;
+  margin-right: 1.3rem; /* Sin márgenes adicionales */
+  margin-left: 1.3rem;
   line-height: 1.8; /* Mejora la legibilidad */
-  padding-top: 20px;
+  padding-top: 1.3rem;
 }
 
 h2 {
@@ -169,6 +169,13 @@ h2 {
 
 h4 {
   color: #1E3A8A;
+}
+
+@media (max-width: 1024px) {
+  .cards {
+    display: flex !important;
+    flex-direction: column;
+  }
 }
 
 .modal-title {
@@ -253,7 +260,7 @@ h4 {
   font-size: 1rem;
   list-style-type: disc;
   color: #333;
-  padding: 5px;
+  padding: 0.3rem;
   border-radius: 4px;
   margin-bottom: 0px;
   margin-left: 20px;
@@ -282,7 +289,7 @@ h4 {
   background-color: rgba(0, 0, 0, 0.75);
   color: white;
   font-size: 12px;
-  padding: 5px 10px;
+  padding: 0.3rem 0.6rem;
   border-radius: 5px;
   opacity: 0;
   visibility: hidden;
@@ -294,6 +301,8 @@ h4 {
   opacity: 1;
   visibility: visible;
 }
+
+/* Estilo projects*/
 
 .projects {
   background: linear-gradient(to bottom, #d3cdcd, #e6f7ff)
@@ -309,22 +318,15 @@ h4 {
   height: fit-content;
 }
 
+.image-container {
+  height: 70vh;
+}
+
 @media (max-width: 1024px) {
   .image-container {
       height: 20rem !important;
   }
 }
-
-@media (max-width: 450px) {
-  .project-card {
-      min-height: 33rem !important;
-  }
-}
-
-.image-container {
-  height: 70vh;
-}
-
 
 
 /*Estilos contactame*/
@@ -345,7 +347,7 @@ h4 {
 .email-container {
   border: 1px solid white;
   border-radius: 50px;
-  margin-bottom: 10px;
+  margin-bottom: 0.6rem;
 }
 
 
