--- a/app/globals.css
+++ b/app/globals.css
@@ -17,8 +17,6 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: scroll;
-  overflow-y: scroll;
 }
 
 body {
@@ -451,16 +449,21 @@ footer p span {
 
 /* PROJECT PAGE STYLES */
 
+.project-page {
+  background: linear-gradient(to bottom, #9e9c9c, #e6f7ff);
+}
+
 .box {
-  width: 60vw; /* Cambia de píxeles a viewport width */
-  height: calc(60vw * 9 / 16); /* Mantiene una proporción de 16:9 */
-  transform: rotate(-25deg) skew(25deg);
-  max-width: 1280px; /* Tamaño máximo para pantallas grandes */
-  max-height: 720px;
+  width: 100%; /* Cambia de píxeles a viewport width */
+  aspect-ratio: 16 / 9;
+  transform: rotate(-15deg) skew(25deg);
+  max-width: 80rem; /* Tamaño máximo para pantallas grandes */
+  max-height: 45rem;
+  display: flex;
 }
 
 .box:hover {
-  transform: rotate(-25deg) skew(-25deg) translateY(-2vh);
+  transform: rotate(-15deg) skew(-15deg) translateY(-1.25rem);
 }
 
 /* Span */
@@ -469,55 +472,31 @@ footer p span {
   height: 100%;
   background: url('../public/funkyart.png');
   background-size: cover; /* Ajusta para cubrir el contenedor */
-  background-position: calc(var(--i) * -100%) 0; /* Escala dinámicamente */
-  display: inline-block;
+  background-position: calc(-19.87rem * var(--i)) ; /* Escala dinámicamente */
+  display: block;
   transition: .5s;
   pointer-events: none;
-  border-top: 1vh solid #fff; /* Ajustado a viewport height */
-  border-bottom: 1vh solid #fff;
+  border-top: 0.313rem solid blue; /* Ajustado a viewport height */
+  border-bottom: 0.313rem solid blue;
 }
 
 /* Efectos al hover */
 .box:hover span:nth-child(odd) {
   transform: skewY(25deg);
-  box-shadow: inset 2vw 0 5vw rgba(0,0,0, .5);
+  box-shadow: inset 1.25rem 0 3.125rem rgba(0,0,0, .5);
 }
 
 .box:hover span:nth-child(even) {
   transform: skewY(-25deg);
-  box-shadow: inset 2vw 0 5vw rgba(0,0,0, .5);
+  box-shadow: inset 1.25rem 0 3.125rem rgba(0,0,0, .5);
 }
 
 /* Bordes en los extremos */
 .box span:first-child {
-  border-left: 0.5vw solid #fff;
+  border-left: 0.313rem solid blue;
 }
 
 .box span:last-child {
-  border-right: 0.5vw solid #fff;
+  border-right: 0.313rem solid blue;
 }
 
-/* Media queries para dispositivos más pequeños */
-@media (max-width: 768px) {
-  .box {
-    width: 90vw;
-    height: calc(90vw * 9 / 16);
-  }
-
-  .box span {
-    border-top: 0.5vh solid #fff;
-    border-bottom: 0.5vh solid #fff;
-  }
-}
-
-@media (max-width: 480px) {
-  .box {
-    width: 100vw;
-    height: calc(100vw * 9 / 16);
-  }
-
-  .box span {
-    border-top: 0.3vh solid #fff;
-    border-bottom: 0.3vh solid #fff;
-  }
-}
